infra/traefik/ingress_route/ingress-route-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sukim-pf-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`tekton.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: tekton-pipelines
          port: 9097

    - kind: Rule
      match: Host(`argocd.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: argocd-server
          namespace: argocd
          port: 80

    - kind: Rule
      match: Host(`authentik.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80

    - kind: Rule
      match: Host(`harbor.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: harbor-portal
          namespace: harbor
          port: 80

    - kind: Rule
      match: Host(`kyverno.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: policy-reporter-ui
          namespace: kyverno
          port: 8080

    - kind: Rule
      match: Host(`grafana.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: grafana
          namespace: monitoring
          port: 80

    - kind: Rule
      match: Host(`nocodb.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: nocodb
          namespace: nocodb
          port: 8080

    - kind: Rule
      match: Host(`trivy.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: trivy-operator-dashboard
          namespace: trivy
          port: 8900

    - kind: Rule
      match: Host(`kuma.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: uptime-kuma
          namespace: uptime-kuma
          port: 3001

    - kind: Rule
      match: Host(`minio.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: minio
          namespace: minio
          port: 9090

    - kind: Rule
      match: Host(`minio-api.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: minio
          namespace: minio
          port: 9000

    - kind: Rule
      match: Host(`vault.8ai.store`)
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: vault-ui
          namespace: vault
          port: 8200
